--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
         applicationId "com.codepath.apps.restclienttemplate"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
     }
 
     // Related to https://github.com/scribejava/scribejava/issues/480
@@ -24,6 +24,10 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '24.2.1'  // variable that can be referenced to keep support libs consistent
+}
+
 repositories {
     jcenter()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
@@ -37,7 +41,12 @@ def dbflow_version= '4.0.0-beta1'
 dependencies {
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.codepath.libraries:android-oauth-handler:1.1.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:support-vector-drawable:${supportLibVersion}" // VectorDrawableCompat
+    compile "com.android.support:animated-vector-drawable:${supportLibVersion}" // AnimatedVectorDrawableCompat
+    //compile 'com.android.support:appcompat-v7:24.1.0'
     // Picasso for remote image loading
     compile 'com.squareup.picasso:picasso:2.5.2'
     // Android Async Http for sending async network requests
@@ -46,5 +55,5 @@ dependencies {
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
     compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    //compile 'com.android.support:recyclerview-v7:24.1.0'
 }
