--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.LoginActivity"
+            android:noHistory="true"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
             <intent-filter>
